[package]
name = "generator"
version = "0.1.0"
authors = ["Guido Knips <guido.knips@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.19"
maud = "^0.22.0"
pulldown-cmark = "^0.8.0"
percent-encoding = "^2.1.0"
quick-xml = "^0.19.0"
clap = "^2.33.3"
