# This file is part of stublog-static.
#
#  stublog-static is free software: you can redistribute it and/or modify
#  it under the terms of the GNU Affero General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  stublog-static is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
#  GNU Affero General Public License for more details.
#
#  You should have received a copy of the GNU Affero General Public License
#  along with stublog-static. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "generator"
version = "0.9.0"
authors = ["Guido Knips <guido.knips@posteo.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.19", default_features = false, features = ["std"] }
maud = "^0.23.0"
pulldown-cmark = { version = "^0.8.0", default_features = false }
percent-encoding = "^2.1.0"
quick-xml = "^0.22.0"
sha2 = "^0.9.8"
