# This file is part of stublog-static.
#
#  stublog-static is free software: you can redistribute it and/or modify
#  it under the terms of the GNU Affero General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  stublog-static is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
#  GNU Affero General Public License for more details.
#
#  You should have received a copy of the GNU Affero General Public License
#  along with stublog-static. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "generator"
version = "0.9.0"
authors = ["Guido Knips <guido.knips@posteo.de>"]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "^0.4.38", default-features = false, features = ["std"] }
maud = "^0.26.0"
pulldown-cmark = { version = "^0.11.0", default-features = false, features = ["html", "simd"] }
pulldown-cmark-escape = { version = "^0.11.0", features = ["simd"] }
percent-encoding = "^2.3.1"
quick-xml = "^0.36.1"
sha2 = "^0.10.8"
image = { version = "^0.25.2", default-features = false, features = ["jpeg", "gif", "webp", "png" ]}
camino = "^1.1.7"
